--- a/package.json
+++ b/package.json
@@ -2,7 +2,24 @@
   "name": "@pixie/root",
   "version": "1.0.0",
   "license": "MIT",
+  "scripts": {
+    "format": "yarn format:core && yarn format:icon",
+    "lint": "yarn lint:core && yarn lint:icon",
+    "prettier-check": "yarn prettier-check:core && yarn prettier-check:icon",
+    "format:core": "prettier --write ./core/src",
+    "format:icon": "prettier --write ./icon/src",
+    "lint:core": "eslint ./core/src --max-warnings=0 --ext=.jsx,.js,.ts,.tsx --ignore-path=./core/.gitignore",
+    "lint:icon": "eslint ./icon/src --max-warnings=0 --ext=.jsx,.js,.ts,.tsx --ignore-path=./icon/.gitignore",
+    "prettier-check:core": "prettier --check ./core/src",
+    "prettier-check:icon": "prettier --check ./icon/src"
+  },
   "devDependencies": {
-    "prettier": "^2.3.1"
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.3.1",
+    "typescript": "^4.3.5"
   }
 }
