--- a/package.json
+++ b/package.json
@@ -3,15 +3,9 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "format": "yarn format:core && yarn format:icon",
-    "lint": "yarn lint:core && yarn lint:icon",
-    "prettier-check": "yarn prettier-check:core && yarn prettier-check:icon",
-    "format:core": "prettier --write ./core/src",
-    "format:icon": "prettier --write ./icon/src",
-    "lint:core": "eslint ./core/src --max-warnings=0 --ext=.jsx,.js,.ts,.tsx --ignore-path=./core/.gitignore",
-    "lint:icon": "eslint ./icon/src --max-warnings=0 --ext=.jsx,.js,.ts,.tsx --ignore-path=./icon/.gitignore",
-    "prettier-check:core": "prettier --check ./core/src",
-    "prettier-check:icon": "prettier --check ./icon/src"
+    "lint": "./scripts/lint.sh",
+    "format": "./scripts/prettier.sh",
+    "prettier-check": "./scripts/prettier-check.sh"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.2",
