--- a/site/package.json
+++ b/site/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@pixiepkg/core": "^0.0.8",
+    "@pixiepkg/core": "^0.0.9",
+    "@pixiepkg/icon": "^0.0.12",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
