--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -4,20 +4,9 @@
     "composite": true,
     "declaration": true,
     "declarationDir": "dist/types",
-    "rootDir": "src",
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    },
-    "plugins": [
-      {
-        "transform": "@zerollup/ts-transform-paths",
-        "exclude": ["*"]
-      }
-    ]
+    "rootDir": "src"
   },
-  "include": ["./src"],
-  "exclude": ["./src/**/*.stories.tsx"]
+  "include": [
+    "./src"
+  ]
 }
