--- a/site/package.json
+++ b/site/package.json
@@ -1,24 +1,25 @@
 {
   "name": "site",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
-    "@pixiepkg/core": "^0.0.9",
     "@pixiepkg/icon": "^0.0.12",
-    "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/react": "17.0.14",
-    "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1",
-    "typescript": "4.3.5"
+    "@types/react": "^17.0.9",
+    "@types/react-dom": "^17.0.6",
+    "@types/rollup-plugin-postcss": "^3.1.4",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "autoprefixer": "^10.3.0",
+    "postcss": "^8.3.5",
+    "typescript": "^4.3.2",
+    "vite": "^2.4.0"
   }
 }
