Fix vercel build fail by do not use extend tsconfig

--- a/site/tsconfig.json
+++ b/site/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "extends": "../tsconfig.json",
   "compilerOptions": {
     "target": "ESNext",
     "lib": [
@@ -11,7 +10,15 @@
     "esModuleInterop": false,
     "module": "ESNext",
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "strict": true,
+    "declaration": true,
+    "skipLibCheck": true,
+    "isolatedModules": true,
+    "resolveJsonModule": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": [
     "./src"
