--- a/site/tsconfig.json
+++ b/site/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "target": "ESNext",
     "lib": [
@@ -10,15 +11,7 @@
     "esModuleInterop": false,
     "module": "ESNext",
     "noEmit": true,
-    "jsx": "react",
-    "strict": true,
-    "declaration": true,
-    "skipLibCheck": true,
-    "isolatedModules": true,
-    "resolveJsonModule": true,
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true
+    "jsx": "react"
   },
   "include": [
     "./src"
