--- a/site/package.json
+++ b/site/package.json
@@ -8,6 +8,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@pixiepkg/core": "^0.0.10",
     "@pixiepkg/icon": "^0.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
