--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,11 +49,11 @@ jobs:
 
       - name: Export distribution
         working-directory: ./site
-        run: yarn next export
+        run: yarn next export -o site
 
       - name: Deploy production
         if: ${{ github.ref == 'refs/heads/master' }}
-        working-directory: ./site
+        working-directory: ./site/site
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
         run: |
@@ -62,7 +62,7 @@ jobs:
 
       - name: Deploy preview
         if: ${{ github.ref != 'refs/heads/master' }}
-        working-directory: ./site
+        working-directory: ./site/site
         id: deploy
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
