--- a/core/package.json
+++ b/core/package.json
@@ -14,7 +14,9 @@
   },
   "watch": {
     "build": {
-      "patterns": ["src/**/*"],
+      "patterns": [
+        "src/**/*"
+      ],
       "extensions": "css, ts, tsx, module.css"
     }
   },
@@ -27,10 +29,18 @@
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
     "@zerollup/ts-transform-paths": "^1.7.18",
     "autoprefixer": "^10.2.6",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-unused-imports": "^1.1.4",
+    "lint-staged": "^11.1.2",
     "npm-watch": "^0.11.0",
     "postcss": "^8.3.0",
+    "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rollup": "^2.51.1",
@@ -43,7 +53,7 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
-    "@pixiepkg/icon": "^0.0.4",
+    "@pixiepkg/icon": "^0.0.12",
     "@types/lodash.chunk": "^4.2.6",
     "classnames": "^2.3.1",
     "lodash.chunk": "^4.2.0",
