--- a/package.json
+++ b/package.json
@@ -3,17 +3,34 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
+    "lint-fix": "",
     "lint": "./scripts/lint.sh",
     "format": "./scripts/prettier.sh",
     "prettier-check": "./scripts/prettier-check.sh"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
+    "husky": "^4.3.7",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-cypress": "^2.11.3",
+    "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-unused-imports": "^1.1.4",
+    "lint-staged": "^11.1.2",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
     "eslint": "^7.30.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.3.1",
     "typescript": "^4.3.5"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "npm run lint -- --quiet --fix"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
