--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
-  "semi": true,
-  "tabWidth": 2,
-  "useTabs": false,
-  "singleQuote": true,
-  "arrowParens": "always",
-  "trailingComma": "none"
+    "semi": true,
+    "useTabs": false,
+    "singleQuote": true,
+    "arrowParens": "always",
+    "trailingComma": "none",
+    "tabWidth": 4,
+    "printWidth": 120,
+    "endOfLine": "auto"
 }
