--- a/site/package.json
+++ b/site/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@pixiepkg/icon": "^0.0.12",
+    "classnames": "^2.3.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
     "@types/react": "17.0.14",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
