--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "build": "yarn lerna run build",
     "dev": "yarn lerna run dev",
+    "demo": "yarn lerna run demo",
     "test": "yarn lerna run test",
     "publish": "yarn test && yarn build && yarn lerna publish",
     "commit": "yarn git-cz",
