--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -4,11 +4,11 @@
   "description": "Pixie icon sets for UI Kit",
   "repository": "https://github.com/pixiespirit/web-uikit.git",
   "license": "MIT",
-  "main": "cjs.js",
-  "module": "esm.js",
-  "types": "types/index.d.ts",
+  "main": "dist/cjs.js",
+  "module": "dist/esm.js",
+  "types": "dist/types/index.d.ts",
   "scripts": {
-    "dev": "yarn build",
+    "dev": "yarn rollup --watch",
     "build": "./scripts/build.sh",
     "rollup": "rollup --config",
     "build:icon": "yarn icon:clean && yarn icon:build",
