--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -35,5 +35,6 @@
     "ts-node": "^10.0.0",
     "ttypescript": "^1.5.12",
     "typescript": "^4.3.2"
-  }
+  },
+  "gitHead": "a9378428a1d759b612b983876357a160a3ce216b"
 }
