--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -51,5 +51,6 @@
         "classnames": "^2.3.1",
         "lodash.chunk": "^4.2.0",
         "react-multi-ref": "^1.0.0"
-    }
+    },
+    "gitHead": "a9378428a1d759b612b983876357a160a3ce216b"
 }
