--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@pixiepkg/react",
-    "version": "0.1.5",
+    "version": "0.2.0",
     "description": "Pixie web core UI react components",
     "main": "dist/cjs.js",
     "module": "dist/esm.js",
@@ -43,13 +43,12 @@
         "rollup-plugin-typescript2": "^0.30.0",
         "ts-node": "^10.0.0",
         "ttypescript": "^1.5.12",
-        "typescript": "^4.3.2"
+        "typescript": "^4.3.2",
+        "lodash.chunk": "^4.2.0",
+        "@types/lodash.chunk": "^4.2.6"
     },
     "dependencies": {
-        "@pixiepkg/icon": "^0.0.12",
-        "@types/lodash.chunk": "^4.2.6",
         "classnames": "^2.3.1",
-        "lodash.chunk": "^4.2.0",
         "react-multi-ref": "^1.0.0"
     },
     "gitHead": "a9378428a1d759b612b983876357a160a3ce216b"
