--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@pixiepkg/react",
-    "version": "0.2.0",
+    "version": "0.2.1",
     "description": "Pixie web core UI react components",
     "main": "dist/cjs.js",
     "module": "dist/esm.js",
@@ -25,6 +25,7 @@
     },
     "devDependencies": {
         "@svgr/cli": "^5.5.0",
+        "@types/lodash.chunk": "^4.2.6",
         "@types/node": "^15.12.2",
         "@types/react": "^17.0.9",
         "@types/react-dom": "^17.0.6",
@@ -32,6 +33,7 @@
         "@typescript-eslint/parser": "^4.29.3",
         "@zerollup/ts-transform-paths": "^1.7.18",
         "autoprefixer": "^10.2.6",
+        "lodash.chunk": "^4.2.0",
         "npm-watch": "^0.11.0",
         "postcss": "^8.3.0",
         "react": "^17.0.2",
@@ -43,9 +45,7 @@
         "rollup-plugin-typescript2": "^0.30.0",
         "ts-node": "^10.0.0",
         "ttypescript": "^1.5.12",
-        "typescript": "^4.3.2",
-        "lodash.chunk": "^4.2.0",
-        "@types/lodash.chunk": "^4.2.6"
+        "typescript": "^4.3.2"
     },
     "dependencies": {
         "classnames": "^2.3.1",
