--- a/demo/react-site/package.json
+++ b/demo/react-site/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-site-2",
+  "name": "react-site",
   "version": "0.1.4",
   "private": true,
   "dependencies": {
@@ -18,6 +18,7 @@
   },
   "scripts": {
     "demo": "react-scripts start",
+    "build:demo": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
