--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,19 +29,20 @@ jobs:
       - name: Build all
         run: yarn build
 
+      - name: Build demo
+        run: yarn build:demo
+
       - name: Deploy production
         if: ${{ github.ref == 'refs/heads/main' }}
-        working-directory: ./demo/react-site
+        working-directory: ./demo/react-site/build
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
         run: |
-          yarn run build:demo
-          cd build
           DEPLOYMENT_URL=$(vercel --token $VERCEL_TOKEN --confirm --no-clipboard --prod)
           echo "::set-output name=deployment_url::$DEPLOYMENT_URL"
       - name: Deploy preview
-        if: ${{ github.ref != 'refs/heads/master' }}
-        working-directory: ./site/site
+        if: ${{ github.ref != 'refs/heads/main' }}
+        working-directory: ./demo/react-site/build
         id: deploy
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
@@ -49,7 +50,7 @@ jobs:
           DEPLOYMENT_URL=$(vercel --token $VERCEL_TOKEN --confirm --no-clipboard)
           echo "::set-output name=deployment_url::$DEPLOYMENT_URL"
       - name: Teardown the deployment
-        if: ${{ github.ref != 'refs/heads/master' }}
+        if: ${{ github.ref != 'refs/heads/main' }}
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           message: |
