publish files from dist

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "yarn lerna run build",
     "build:demo": "yarn lerna run build:demo",
     "test": "yarn lerna run test",
-    "publish": "yarn build && yarn lerna publish from-git",
+    "publish": "yarn build && yarn lerna publish",
     "commit": "yarn git-cz",
     "test:chromatic": "yarn lerna run test:chromatic",
     "build:storybook": "yarn build && yarn lerna run build-storybook"
