--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -12,7 +12,8 @@
     ],
     "scripts": {
         "build": "rollup -c",
-        "dev": "yarn build --watch"
+        "dev": "yarn build --watch",
+        "prepublishOnly": "cp -r ./dist/* ."
     },
     "watch": {
         "build": {
