--- a/lerna.json
+++ b/lerna.json
@@ -1,15 +1,12 @@
 {
-    "packages": [
-        "packages/*",
-        "playgrounds/*"
-    ],
-    "version": "0.2.3",
-    "npmClient": "yarn",
-    "useWorkspaces": true,
-    "stream": true,
-    "command": {
-        "publish": {
-            "conventionalCommits": true
-        }
+  "packages": ["packages/*"],
+  "version": "0.2.3",
+  "npmClient": "yarn",
+  "useWorkspaces": true,
+  "stream": true,
+  "command": {
+    "publish": {
+      "conventionalCommits": true
     }
+  }
 }
