--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
-  "packages": ["packages/*"],
-  "version": "0.2.3",
+  "packages": [
+    "packages/*"
+  ],
+  "version": "0.2.4",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "stream": true,
