--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,6 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "0.3.1",
+  "packages": ["packages/*"],
+  "version": "0.3.2",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "stream": true,
