--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
     types: [closed]
+  push:
+    branches:
+      - main
 
 permissions:
   contents: write # for checkout and tag
