--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,5 @@
 {
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "version": "0.4.1",
   "npmClient": "yarn",
   "useWorkspaces": true,
@@ -9,9 +7,6 @@
   "command": {
     "publish": {
       "conventionalCommits": true
-    },
-    "version": {
-      "allowBranch": "main"
     }
   }
 }
