--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
-  "packages": ["packages/*"],
-  "version": "0.4.2",
+  "packages": [
+    "packages/*"
+  ],
+  "version": "0.4.3",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "stream": true,
