--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
       "demo/*"
     ]
   },
+  "publishConfig": {
+    "@pixiespirit:registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "watch": "yarn lerna run watch",
     "demo": "yarn lerna run demo",
