--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -27,6 +27,9 @@
         "react": ">=16",
         "react-dom": ">=16"
     },
+    "publishConfig": {
+        "@pixiespirit:registry": "https://npm.pkg.github.com"
+    },
     "devDependencies": {
         "@svgr/cli": "^5.5.0",
         "@types/lodash.chunk": "^4.2.6",
